--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,28 @@
+awscli==1.25.12
+boto3==1.24.12
+botocore==1.27.12
 click==8.1.3
+colorama==0.4.4
+decorator==5.1.1
+dnspython==2.2.1
+docutils==0.16
+email-validator==1.2.1
 Flask==2.1.2
+Flask-WTF==1.0.1
+idna==3.3
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 MarkupSafe==2.1.1
+pyasn1==0.4.8
+python-dateutil==2.8.2
+PyYAML==5.4.1
+rsa==4.7.2
+s3transfer==0.6.0
+six==1.16.0
+urllib3==1.26.9
+validators==0.20.0
 Werkzeug==2.1.2
+WTForms==3.0.1
 zipp==3.8.0
